<resources>
    <string name="app_name">CodeLabPractices</string>
    <string name="code_labs_header">CodeLabs</string>
    <string name="lab_1_2">1.2 First Interactive UI</string>
    <string name="lab_1_3">1.3 Scrolling Views</string>
    <string name="lab_2_1">2.1 – 2.2 Activities and Intents</string>
    <string name="lab_2_3">2.3 Implicit Intents</string>
    <string name="lab_3_1"><![CDATA[3.1 SimpleCalc & Debugger]]></string>
    <string name="lab_3_3">3.3 Support Libraries</string>
    <string name="lab_4_1">4.1 – 4.3 Droid Cafe</string>
    <string name="lab_4_4">4.3 – 4.4 Tab Navigation with AlertDialog and DatePicker</string>
    <string name="lab_4_5">4.5 RecyclerView</string>
    <string name="lab_5_1">5.1 Drawables, Styles, and Themes</string>
    <string name="lab_5_2">5.2 Material Design</string>
    <string name="compose_basics">Compose Basics</string>
    <string name="other_practices">Other Practices</string>
    <string name="compose_list">Compose Dynamic List</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="article_title">Beatles Anthology Vol. 1</string>
    <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
        \n\n
        This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
        \n\n
        <b>Highlights include:</b>
        \n\n
        <b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
        \n\n
        <b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
        \n\n
        <b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
        \n\n
        <b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
        \n\n
        <b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
        \n\n
        <b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
        \n\n
        <b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.</string>
    <string name="add_comment_button">ADD COMMENT</string>
    <string name="send">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="message_received">Message Received</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="title_activity_compose_dynamic_list">ComposeDynamicList</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">SLC</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operand_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
    <string name="hello_world_text">Hello World</string>
    <string name="change_color_button">Change Color</string>
    <string name="title_activity_droid_cafe">DroidCafe</string>
    <string name="first_fragment_label">Droid Cafe</string>
    <string name="second_fragment_label">Your Order</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="address">Address</string>
    <string name="enter_number_hint">Enter your phone number</string>
    <string name="phone">Phone</string>
    <string name="note">Note</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day">Same day messenger service</string>
    <string name="next_day">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_code_lab_compose">CodeLabCompose</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="alert_header">Tap to test the alert.</string>
    <string name="alert_title">Alert</string>
    <string name="alert_dialog">Click OK to continue, or Cancel to stop:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date_picker_header">Tap to test the date picker.</string>
    <string name="date_title">Date</string>
    <string name="datepicker">datePicker</string>
    <string name="title_activity_code_lab4_dot4">CodeLab4Dot4</string>
    <string name="tab_text_1">Alert Dialog</string>
    <string name="tab_text_2">Date Picker</string>
    <string name="title_activity_code_lab4_dot5">CodeLab4Dot5</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="team_1">Team 1</string>
    <string name="minus_button_description">Minus Button</string>
    <string name="zero">0</string>
    <string name="team_2">Team 2</string>
    <string name="plus_button_description">Plus Button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>
</resources>