<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/sport_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sport_title"
            android:text="@string/title_placeholder"
            android:padding="8dp"
            android:layout_alignBottom="@id/sport_image"
            style="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sport_news_Title"
            android:text="@string/news_placeholder"
            android:padding="8dp"
            android:layout_below="@id/sport_image"
            style="@style/TextAppearance.AppCompat.Subhead" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sport_sub_title"
            android:text="@string/sports_info_placeholder"
            android:padding="8dp"
            android:layout_below="@id/sport_news_Title"
            style="@style/TextAppearance.AppCompat.Subhead" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
