<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CodeLab5Dot2DetailsActivity">
        <ImageView
            android:id="@+id/detail_sport_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_sport_title"
            android:text="@string/title_placeholder"
            android:padding="16dp"
            android:layout_alignBottom="@id/detail_sport_image"
            style="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_sport_news_title"
            android:text="@string/news_placeholder"
            android:padding="16dp"
            android:layout_below="@id/detail_sport_image"
            style="@style/TextAppearance.AppCompat.Subhead" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_sport_sub_title"
            android:text="@string/lorem_ipsum_paragraph"
            android:padding="16dp"
            android:layout_below="@+id/detail_sport_news_title"
            style="@style/TextAppearance.AppCompat.Subhead" />

    </RelativeLayout>
</ScrollView>